--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 <ul>
     {% for task in tasks %}
         <li style="margin-bottom: 15px;">
-            <strong> {{ task.title }}</strong>  <!-- Убедитесь, что используете правильное поле -->
+            <strong> {{ task.title }}</strong>  
             <br>
             <em>{{ task.description }}</em>
             <hr style="border: none; border-top: 1px solid #ccc;">
